# chore_planner

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  chores_planner.sql  notes.xopp
docs/: eer_model.xopp  probability_distribution.xopp
example_deployment/: docker-compose.yml
signal_test/: Cargo.toml
signal_test/src/: main.rs
src/: bot.rs  command.rs  db.rs  main.rs  paginate.rs  signal_bot.rs  telegram_bot.rs  test_bot.rs  week.rs
src/db/: chore_commands.rs  exemption.rs  exemption_commands.rs  key_value.rs  plan.rs  plan_commands.rs  rating.rs  report_commands.rs  scheme.rs  tenant.rs  tenant_commands.rs
src/signal/: mod.rs  signal_bot.rs  signal_client.rs
src/signal/transports/: mod.rs
src/signal_bot/: LICENSE  signal_cli_interface.rs
src/tests/: db_test.rs
